--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>7Network.Fun - Premium C2 Server</title>
+    <title>7Network.Fun - Premium C2 Botnet</title>
     
     <!-- Meta Description -->
-    <meta name="description" content="Experience the power of next-generation command and control infrastructure. Premium C2 server with 200 GBPS UDP power, 99.9% uptime, and 24/7 support.">
+    <meta name="description" content="Experience the power of next-generation command and control infrastructure. Premium C2 botnet with 200 GBPS UDP power, 99.9% uptime, and 24/7 support.">
     
     <!-- Open Graph Meta Tags for Discord/Facebook -->
-    <meta property="og:title" content="7Network.Fun - Premium C2 Server">
-    <meta property="og:description" content="Premium C2 server with 200 GBPS UDP power, 99.9% uptime, and 24/7 support. Join our Discord for VIP access to next-generation infrastructure.">
+    <meta property="og:title" content="7Network.Fun - Premium C2 Botnet">
+    <meta property="og:description" content="Premium C2 Botnet with 200 GBPS UDP power, 99.9% uptime, and 24/7 support. Join our Discord for VIP access to next-generation infrastructure.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://7network.fun">
     <meta property="og:site_name" content="7Network.Fun">
